[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sedarch"
version = "1.0.0"
description = "Sedimentary and Stratigraphic Forward Modelling"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "SedArch Contributors" }]
keywords = ["geology", "stratigraphy", "sedimentary", "modelling", "simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Geology",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7",
    "scipy>=1.10",
]
dev = [
    "pytest>=7",
]

[project.scripts]
sedarch = "sedarch.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sedarch*"]
